--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "node-sass-middleware": "0.11.0",
     "pug": "2.0.0-beta11",
     "p5": "0.7.2",
-    "bootstrap": "^4.2.1"
+    "bootstrap": "^4.2.1",
+    "jquery": "^3.3.1"
   }
 }
